--- a/index.html
+++ b/index.html
@@ -1013,5 +1013,15 @@
 <!--End Google Map APi-->
 
 <script src="https://hd51.oss-cn-beijing.aliyuncs.com/yc/js/script.js"></script>
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3b8f1770ee8a4d85c7ca396b2773217a";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </body>
 </html>
