--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var _hmt = _hmt || [];
  	
     <!-- Preloader -->
 
- 	
+ 	<div class="preloader"></div>
     <!-- Main Header-->
     <header class="main-header">
     	<!-- Main Box -->
