--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  	
     <!-- Preloader -->
 
- 	<div class="preloader"></div>
+ 	<div class="preloader hide"></div>
     <!-- Main Header-->
     <header class="main-header">
     	<!-- Main Box -->
