--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 	  		<div class="auto-container">
 	  			<div class="row clearfix">
 	  				<div class="column col-md-6 col-sm-6 col-xs-12">
-	  					<div class="copyright">Copyright &copy; 2019.北京煦泽互联信息科技有限公司 All rights reserved. <br/><a href="http://beian.miit.gov.cn/">京ICP备19022001号</a></div>
+	  					<div class="copyright">Copyright &copy; 2019.北京煦泽互联信息科技有限公司 All rights reserved. <br/><a href="http://beian.miit.gov.cn/">京ICP备19022001号-1</a></div>
 	  				</div>
 	  				<div class="column col-md-6 col-sm-6 col-xs-12" style="display:none">
 	  					<div class="social-icon">
